# langgraph-dev-space

./: .env.example  .gitignore  README.md  langgraph.json  main.py  mcp-servers-config.json  mcp_tool_call_example_plan.md  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
mcp-packages/corp-jira/: .env.example  Dockerfile  README.md  env.ts  index.ts  package-lock.json  package.json  tsconfig.json
mcp-packages/corp-jira/common/: config.ts  errors.ts  utils.ts
mcp-packages/corp-jira/operations/: addComment.ts  auth.ts  create.ts  getComments.ts  getIssueTypeMetadata.ts  getIssueTypes.ts  getProjectComponents.ts  getProjectConfig.ts  search.ts  status.ts  update.ts
src/: assistent_graph.py  build_router_graph.py  configuration.py  main.py  mcp_wrapper.py  notion_mcp_tools_example.py  prompts.py  retriever.py  state.py  utils.py
src/examples/: agents.ipynb  building_blocks_the_augmented_llm.ipynb  evaluator-optimizer.ipynb  orchestrator.ipynb  parallelization.ipynb  pre_built_agents.ipynb  prompt_chaining.ipynb  routing.ipynb  simple_mcp_example.py  simple_mcp_state.py
src/proxy/: mcp_proxy.py
